[package]
name = "infra-hex-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
n3gb-rs = { path = "../n3gb-rs" }
arrow-array = "56"
arrow-cast = { version = "56", features = ["prettyprint"] }
arrow-schema = "56"
geoarrow-array = "0.6"
geoarrow-schema = "0.6"
geoparquet = "0.6"
parquet = "56"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"
geo-types = "0.7"
thiserror = "2.0"
urlencoding = "2.1"
rayon = "1.10"
