[package]
name = "infra-hex-rs"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rust library to create hex density grids of open underground asset data."
repository = "https://github.com/CHRISCARLON/infra-hex-rs"
keywords = ["grids", "hex", "arrow", "infrastructure", "geospatial"]

[dependencies]
n3gb-rs = "0.1.6"
arrow-array = "56"
arrow-cast = { version = "56", features = ["prettyprint"] }
arrow-schema = "56"
geoarrow-array = "0.6"
geoarrow-schema = "0.6"
geoparquet = "0.6"
parquet = "56"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"
geo-types = "0.7"
thiserror = "2.0"
urlencoding = "2.1"
rayon = "1.10"

[dev-dependencies]
geo = "0.32"
